--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="#">Portfolio</a></li>
 						<li class="hide-small"><a href="#">FAQs</a></li>
 						<li class="hide-small"><a href="#">Links</a></li>
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">Contact Me</a></li>
 					</ul>
 				</nav>
 			</div><!-- /container -->
